feat(backend): implemants updating